# babel-fish

./: .Live_analysis.h.swp  .gitignore  1.txt  2.cc  CMakeLists.txt  Dominators.cc  Dominators.h  Exception.h  Gvn_Gcm.cc  Gvn_Gcm.h  IR.cpp  IR.h  IRBuilder.h  IR_oldtest.sh  IRtest.cc  IRtest.out  IRtest.sh  IR文档.md  Live_analysis.h  LoopInvHoist.cc  LoopInvHoist.hpp  LoopSearch.cc  LoopSearch.hpp  Makefile  Mem2Reg.cc  Mem2Reg.h  PassManager.h  README.md  RemoveRedundantLoad.cpp  a.out  arm.cpp  arm.h  arm_test.cc  ast.cc  ast.cc.in  ast.cpp  ast.h  ast.hpp  babel.cc  build.sh  (+35 more)
.github/workflows/: test.yml
IR/include/: Argument.h  BasicBlock.h  Constant.h  ConstantArray.h  ConstantFloat.h  ConstantInt.h  ConstantZero.h  Context.h  Exception.h  FloatType.h  Function.h  FunctionType.h  GlobalVariable.h  IR.h  IRBuilder.h  IcmpInst.h  Instruction.h  IntegerType.h  Module.h  Type.h  Use.h  User.h  Util.h  Value.h
IR/include/Instructions/: AllocaInst.h  BinaryInst.h  BranchInst.h  CallInst.h  FcmpInst.h  FpToSiInst.h  GetElementPtrInst.h  IcmpInst.h  Instruction.h  LoadInst.h  PhiInst.h  ReturnInst.h  SiToFpInst.h  StoreInst.h  UnaryInst.h  ZextInst.h
IR/include/Types/: ArrayType.h  FloatType.h  FunctionType.h  PointerType.h  Type.h
IR/src/: Argument.cc  ArrayType.cc  BasicBlock.cc  CMakeLists.txt  ConstantArray.cc  ConstantFloat.cc  ConstantInt.cc  ConstantZero.cc  Context.cc  FloatType.cc  Function.cc  FunctionType.cc  GlobalVariable.cc  IcmpInst.cc  Instruction.cc  IntegerType.cc  Module.cc  Module.h  PointerType.cc  Type.cc  Use.cc  User.cc  Value.cc
IR/src/Instructions/: AllocaInst.cc  BinaryInst.cc  BranchInst.cc  CallInst.cc  FcmpInst.cc  FpToSiInst.cc  GetElementPtrInst.cc  IcmpInst.cc  Instruction.cc  LoadInst.cc  PhiInst.cc  ReturnInst.cc  SiToFpInst.cc  StoreInst.cc  UnaryInst.cc  ZextInst.cc
IR/src/Types/: ArrayType.cc  FloatType.cc  FunctionType.cc  IntegerType.cc  PointerType.cc  Type.cc
IRtest_out/: 000_main.elf  001_var_defn.elf  002_var_defn2.elf  003_var_defn3.elf  004_arr_defn.elf  005_arr_defn2.elf  006_arr_defn3.elf  007_arr_defn4.elf  008_const_var_defn.elf  009_const_var_defn2.elf  010_const_var_defn3.elf  011_const_array_defn.elf  012_func_defn.elf  013_var_defn_func.elf  014_add.elf  015_add2.elf  016_addc.elf  017_sub.elf  018_sub2.elf  019_subc.elf  020_mul.elf  021_mulc.elf  022_div.elf  023_divc.elf  024_mod.elf  025_rem.elf  026_if.elf  027_if2.elf  028_if_test1.elf  029_if_test2.elf  030_if_test3.elf  031_if_test4.elf  032_if_test5.elf  033_while_if.elf  034_while_test1.elf  035_while_test2.elf  036_while_test3.elf  036_while_test3.err  037_break.elf  038_continue.elf  (+153 more)
custom_tests/: asm_test.sy  neg.sy
functional/: .61_sort_test7.sy.swp  55_sort_test1.sy  61_sort_test7.c
hidden_functional/: 39_fp_params.sy
irs/: 000_main.ll  001_var_defn.ll  002_var_defn2.ll  003_var_defn3.ll  004_arr_defn.ll  005_arr_defn2.ll  006_arr_defn3.ll  007_arr_defn4.ll  008_const_var_defn.ll  009_const_var_defn2.ll  010_const_var_defn3.ll  011_const_array_defn.ll  012_func_defn.ll  013_var_defn_func.ll  014_add.ll  015_add2.ll  016_addc.ll  017_sub.ll  018_sub2.ll  019_subc.ll  020_mul.ll  021_mulc.ll  022_div.ll  023_divc.ll  024_mod.ll  025_rem.ll  026_if.ll  027_if2.ll  028_if_test1.ll  029_if_test2.ll  030_if_test3.ll  031_if_test4.ll  032_if_test5.ll  033_while_if.ll  034_while_test1.ll  035_while_test2.ll  036_while_test3.ll  037_break.ll  038_continue.ll  039_while_if_test1.ll  (+63 more)
oldtest/: test_2021_70.sy
parser/: .gitignore  ast.cc  ast.h  check.cc  lexical_analyzer.l  test  test.sh
rigth_out/: 000_main.elf  001_var_defn.elf  002_var_defn2.elf  003_var_defn3.elf  004_arr_defn.elf  005_arr_defn2.elf  006_arr_defn3.elf  007_arr_defn4.elf  008_const_var_defn.elf  009_const_var_defn2.elf  010_const_var_defn3.elf  011_const_array_defn.elf  012_func_defn.elf  013_var_defn_func.elf  014_add.elf  015_add2.elf  016_addc.elf  017_sub.elf  018_sub2.elf  019_subc.elf  020_mul.elf  021_mulc.elf  022_div.elf  023_divc.elf  024_mod.elf  025_rem.elf  026_if.elf  027_if2.elf  028_if_test1.elf  030_if_test3.elf  031_if_test4.elf  032_if_test5.elf  034_while_test1.elf  035_while_test2.elf  036_while_test3.elf  037_break.elf  038_continue.elf  039_while_if_test1.elf  040_while_if_test2.elf  041_while_if_test3.elf  (+18 more)
test_2021_out/: 000_main.sy.out  001_var_defn.sy.out  002_var_defn2.sy.out  003_var_defn3.sy.out  004_arr_defn.sy.out  005_arr_defn2.sy.out  006_arr_defn3.sy.out  007_arr_defn4.sy.out  008_const_var_defn.sy.out  009_const_var_defn2.sy.out  010_const_var_defn3.sy.out  011_const_array_defn.sy.out  012_func_defn.sy.out  013_var_defn_func.sy.out  014_add.sy.out  015_add2.sy.out  016_addc.sy.out  017_sub.sy.out  018_sub2.sy.out  019_subc.sy.out  020_mul.sy.out  021_mulc.sy.out  022_div.sy.out  023_divc.sy.out  024_mod.sy.out  025_rem.sy.out  026_if.sy.out  027_if2.sy.out  028_if_test1.sy.out  029_if_test2.sy.out  030_if_test3.sy.out  031_if_test4.sy.out  032_if_test5.sy.out  033_while_if.sy.out  034_while_test1.sy.out  035_while_test2.sy.out  036_while_test3.sy.out  037_break.sy.out  038_continue.sy.out  039_while_if_test1.sy.out  (+64 more)
