set(IR_SRC
    Types/Type.cc
    Types/PointerType.cc
    Types/IntegerType.cc
    Types/ArrayType.cc
    Types/FunctionType.cc
    Instructions/AllocaInst.cc
    Instructions/BinaryInst.cc
    Instructions/BranchInst.cc
    Instructions/CallInst.cc
    Instructions/FcmpInst.cc
    Instructions/FpToSiInst.cc
    Instructions/GetElementPtrInst.cc
    Instructions/IcmpInst.cc
    Instructions/Instruction.cc
    Instructions/LoadInst.cc
    Instructions/PhiInst.cc
    Instructions/ReturnInst.cc
    Instructions/SiToFpInst.cc
    Instructions/StoreInst.cc
    Instructions/ZextInst.cc
    Argument.cc
    BasicBlock.cc
    ConstantArray.cc
    ConstantFloat.cc
    ConstantInt.cc
    ConstantZero.cc
    Context.cc
    Function.cc
    GlobalVariable.cc
    Module.cc
    Use.cc
    User.cc
    Value.cc 
)

add_library(IR ${IR_SRC})
